<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
	</parent>
	<groupId>com.c4-soft.springaddons</groupId>
	<artifactId>spring-addons</artifactId>
	<version>9.3.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>spring-addons</name>
	<description>Make Spring developpers' life easier when OAuth2 / OpenID is involved</description>
	<url>https://github.com/ch4mpy/spring-addons/</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>ch4mpy</id>
			<name>Jérôme Wacongne</name>
			<email>ch4mp@c4-soft.com</email>
			<url>https://github.com/ch4mpy</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/ch4mpy/spring-addons.git</connection>
		<developerConnection>scm:git:git@github.com:ch4mpy/spring-addons.git</developerConnection>
		<url>https://github.com/ch4mpy/spring-addons</url>
		<tag>spring-addons-9.1.3</tag>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>

		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>

	</distributionManagement>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
		<nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>

		<sonar-maven-plugin.version>5.5.0.6356</sonar-maven-plugin.version>

		<spring-boot.version>${project.parent.version}</spring-boot.version>

		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<org.mapstruct.version>1.6.3</org.mapstruct.version>

		<integration-tests.hostname>${env.HOSTNAME}</integration-tests.hostname>
		<integration-tests.scheme>https</integration-tests.scheme>

        <springdoc-openapi.version>3.0.2</springdoc-openapi.version>
		<springdoc-openapi-maven-plugin.version>1.5</springdoc-openapi-maven-plugin.version>

		<wiremock-spring-boot.version>4.2.0</wiremock-spring-boot.version>
		<openapi-generator-maven-plugin.version>7.20.0</openapi-generator-maven-plugin.version>

		<repackage.classifier />
		<image.builder>paketobuildpacks/builder:tiny</image.builder>
		<ca-certificates.binding>${project.basedir}/bindings/ca-certificates</ca-certificates.binding>
		<image.native>false</image.native>
		<image.arguments />
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-oauth2</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-oauth2-test</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-starter-oidc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-starter-oidc-test</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-starter-rest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			
            <dependency>
                <groupId>org.wiremock.integrations</groupId>
                <artifactId>wiremock-spring-boot</artifactId>
                <version>${wiremock-spring-boot.version}</version>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
					<configuration>
						<classifier>${repackage.classifier}</classifier>
						<image>
							<builder>${image.builder}</builder>
							<bindings>
								<binding>
									${ca-certificates.binding}:/platform/bindings/ca-certificates:ro</binding>
							</bindings>
							<env>
								<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
							</env>
						</image>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
					<executions>
					</executions>
				</plugin>
				
                <!--
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>${nexus-staging-maven-plugin.version}</version>
				</plugin>
				-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>${maven-gpg-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar-maven-plugin.version}</version>
				</plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                </plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<parameters>true</parameters>
					<!-- javac 23+ defaults to -proc:none: keep Lombok and the configuration processor running -->
					<proc>full</proc>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>

			<!-- attach sources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- run javadoc at each build to detect warnings and errors before
			release -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

            <!--
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			-->

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<modules>
				<module>spring-addons-oauth2</module>
				<module>spring-addons-oauth2-test</module>
				<module>spring-addons-starter-oidc</module>
				<module>spring-addons-starter-oidc-test</module>
				<module>spring-addons-starter-rest</module>
				<module>spring-addons-starter-openapi</module>
                <module>spring-addons-starter-recaptcha</module>
			</modules>
			<build>
				<plugins>
					<!-- sign artifacts -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<executable>gpg</executable>
									<!-- Prevent `gpg` from using pinentry
									programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>spring-addons-oauth2</module>
				<module>spring-addons-oauth2-test</module>
				<module>spring-addons-starter-oidc</module>
				<module>spring-addons-starter-oidc-test</module>
				<module>spring-addons-starter-rest</module>
				<module>spring-addons-starter-openapi</module>
                <module>spring-addons-starter-recaptcha</module>
				<module>samples</module>
			</modules>
		</profile>
	</profiles>

</project>
